# mmv

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
lib/: Cargo.toml
lib/src/: destination_path_template.rs  glob_star_pattern.rs  lib.rs  source_path_pattern.rs
src/: main.rs
tests/: test_main.rs
tests/common/: mod.rs
